--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <ul class="">
                     <a href="#ini">Inicio</a>
 
-                    <a href="">La Historia de Nachito</a>
-                    <a href="">El vampiro de Belen</a>
-                    <a href="">El Árbol del Ahorcado</a>
+                    <a href="#H-Nach">La Historia de Nachito</a>
+                    <a href="#H-Vamp">El vampiro de Belen</a>
+                    <a href="#H-Arb">El Árbol del Ahorcado</a>
 
-                    <a href="">Las gavetas de la suerte</a>
-                    <a href="">El Consultorio Medico</a>
+                    <a href="#H-Gab">Las gavetas de la suerte</a>
+                    <a href="#H-Cons">El Consultorio Medico</a>
 
 
-                    <a href="">Dato 1</a>
-                    <a href="">Dato 2</a>
+                    <a href="#D-Esp">Dato 1</a>
+                    <a href="#Ct">Dato 2</a>
                 </ul>
             </div>
         </nav>
@@ -102,7 +102,7 @@
             <hr>
             <br><br>
 
-            <h2>Consultorio Medico</h2>
+            <h2 id="H-Cons">Consultorio Medico</h2>
             <p> en el Panteón de Belén relata que un médico realizaba autopsias y experimentos allí,
                 dejando una energía inquietante. Visitantes afirman escuchar ruidos de instrumentos y ver sombras, 
                 como si el médico siguiera trabajando, mientras las almas de los fallecidos permanecen atrapadas en el lugar.
@@ -117,7 +117,7 @@
         </p>
  
         <section class="Historias" style="background-color: #560789;">
-            <h2>Hay mucho espacio entre las tumbas para prevenir brotes</h2>
+            <h2 id="D-Esp">Hay mucho espacio entre las tumbas para prevenir brotes</h2>
             <p>
                 Las personas se estaban muriendo por enfermedades muy contagiosas y por eso cuando tenían 
                 que escarbar otra tumba se aseguraban de que había espacio suficiente para prevenir que se
@@ -130,7 +130,7 @@
             <br><br>
 
 
-            <h2>Las catacumbas del panteón</h2>
+            <h2 id="D-Ct">Las catacumbas del panteón</h2>
             <p>Bajo el Panteón de Belén existen catacumbas donde se guardaban restos humanos. Aunque ahora están cerradas al público, 
                 se cuenta que hay túneles que conectan con otros puntos de la ciudad.</p>
             <img src="https://www.eloccidental.com.mx/local/coa0ik-tunel-refugio.jpg/alternates/LANDSCAPE_400/T%C3%BAnel%20Refugio.jpg" alt="">
