--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
                     <a href="#D-Esp">Dato 1</a>
-                    <a href="#Ct">Dato 2</a>
+                    <a href="#D-Ct">Dato 2</a>
                 </ul>
             </div>
         </nav>
